moved links out of header-section

--- a/index.html
+++ b/index.html
@@ -20,36 +20,26 @@
                 <h1>Andr&eacute; Shannon</h1>
                 <h2>(He/Him/His)</h2>
             </div>
-            <div class="links">
-                <a href="mailto:andrejshannon@gmail.com"><i class="fas fa-envelope"></i>email</a>
-                <a href="img/andreShannonCV.pdf" target="_blank"><i class="fas fa-file-alt"></i>resume</a>
-                <a href="https://github.com/AndreShannon" target="_blank"><i class="fab fa-github"></i>github</a>
-                <a href="https://www.linkedin.com/in/andre-shannon/" target="_blank"><i class="fab fa-linkedin-in"></i>linkedin</a>
-            </div>
             <!-- <div class="img-frame1">
                 <img id="photo" src="img/myself.jpg" alt="Andr&eacute; Shannon" />
                 Original dimensions 768 × 1024
                 style="float:right;width:288px;height:384px;"
             </div> -->
         </div>
-        <!-- <div class="image-section">
-            <div class="img-frame1">
-                <img id="photo" src="img/Fun.jpg" alt="" />
-            </div>
-            <div class="img-frame2">
-                <img id="photo" src="img/NikitaLevitating.jpg" alt="" />
-            </div>
-        </div> -->
-        <div class="bio-switcher">
-            <div class="bio short show">
-                Hello! <br> My name is Andr&eacute; and I am a 2022 graduate
-                from the University of Richmond where I received a BS in
-                Mathematics and Computer Science. I am interested in machine
-                learning (particualarly reinforcement learning) and robotics.
-                In my spare time, I read, bike, solve Rubik's Cubes, take
-                outdoor trips, and play Soccer, Ultimate Frisbee, Spikeball,
-                and Quadball.
-            </div>
+        <div class="links">
+            <a href="mailto:andrejshannon@gmail.com"><i class="fas fa-envelope"></i>email</a>
+            <a href="img/andreShannonCV.pdf" target="_blank"><i class="fas fa-file-alt"></i>resume</a>
+            <a href="https://github.com/AndreShannon" target="_blank"><i class="fab fa-github"></i>github</a>
+            <a href="https://www.linkedin.com/in/andre-shannon/" target="_blank"><i class="fab fa-linkedin-in"></i>linkedin</a>
+        </div>
+        <div class="bio">
+            Hello! <br> My name is Andr&eacute; and I am a 2022 graduate
+            from the University of Richmond where I received a BS in
+            Mathematics and Computer Science. I am interested in machine
+            learning (particualarly reinforcement learning) and robotics.
+            In my spare time, I read, bike, solve Rubik's Cubes, take
+            outdoor trips, and play Soccer, Ultimate Frisbee, Spikeball,
+            and Quadball.
         </div>
     </div>
     <div class="snowFlake">
