--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header-section">
             <div class="header-frame">
                 <h1>Andr&eacute; Shannon</h1>
-                <h2>(He/Him/His)</h2>
+                <h2>(he/him/his)</h2>
             </div>
             <!-- <div class="img-frame1">
                 <img id="photo" src="img/myself.jpg" alt="Andr&eacute; Shannon" />
