added to summary

--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
         <div class="bio">
             Hello! <br> My name is Andr&eacute; and I am a 2022 graduate
             from the University of Richmond where I received a BS in
-            Mathematics and Computer Science. I am interested in machine
-            learning (particualarly reinforcement learning) and robotics.
-            In my spare time, I read, bike, solve Rubik's Cubes, take
-            outdoor trips, and play Soccer, Ultimate Frisbee, Spikeball,
-            and Quadball.
+            Mathematics and Computer Science. I am interested in artificial
+            intelligence, machine learning (particualarly reinforcement learning)
+            and robotics. In my spare time, I read (recommending all Brandon
+            Sanderson books!), bike, solve Rubik's Cubes, take outdoor trips,
+            and play Soccer, Ultimate Frisbee, Spikeball, and Quadball.
         </div>
     </div>
     <div class="snowFlake">
