--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
+    <!-- <img id="yosemite" src="img/Yosemite3.jpg" alt="" /> -->
     <div class="img-frame2">
-        <!--Original dimensions 4656 × 2218 -->
-        <img id="photo" src="img/Yosemite.jpg" alt="" />
+        <img id="yosemite" src="img/Yosemite3.jpg" alt="" />
     </div>
     <div class="container">
         <div class="header-section">
