added technical report and presentation slides to summer 2020 research

--- a/index.html
+++ b/index.html
@@ -206,9 +206,12 @@
                     algorithms for computing the clearance of a given state and sampling
                     for points on the medial axis.
                 </p>
+                <a href="img/TechnicalReport.pdf" target="_blank">Technical Report</a><br>
+                <a href="img/MASlides.pdf" target="_blank">Presentation Slides</a>
                 <!-- <div class="snowflake-divider">
                     <img id="snowflake" src="img/snowFlake.png" alt="" />
                 </div> -->
+                <br><br>
             </span>
             <button class="moreLess" onclick="showMoreLess(document.getElementById('more3'), document.getElementById('btn3'))" id="btn3"><i>About</i></button>
 
