added link to code for summer 2021 research

--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
                     frequencies corresponding to specific characters, there would be
                     many more than just one.
                 </p>
-                <a href="img/Spring Symposium Poster 2022.pptx.pdf" target="_blank">Symposium Poster</a>
+                <a href="img/Spring Symposium Poster 2022.pptx.pdf" target="_blank">Symposium Poster</a><br>
+                <a href="https://github.com/AndreShannon/Summer-Research-2021" target="_blank">GitHub Repository</a>
                 <!-- <a href="https://arxiv.org/abs/1602.04938" target="_blank">Ribeiro et al.</a> <br> -->
                 <!-- <a href="https://nvidia.github.io/OpenSeq2Seq/html/speech-recognition/deepspeech2.html" target="_blank">DeepSpeech2</a> <br>
                 <a href="https://arxiv.org/abs/1512.02595" target="_blank">DeepSpeech2 paper</a> -->
