added links to slides for honors thesis and frames presentation

--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                     honors thesis for now.
                 </p>
                 <a href="https://scholarship.richmond.edu/honors-theses/1656" target="_blank">Honors Thesis (Abstract)</a><br>
-                <a href="img/Honors_Thesis.pdf" target="_blank">Honors Thesis (Full)</a>
+                <a href="img/Honors_Thesis.pdf" target="_blank">Honors Thesis (Full)</a><br>
+                <a href="img/HonorsThesisColloquiumTalk.pdf" target="_blank">Presentation Slides</a>
                 <!-- <div class="snowflake-divider">
                     <img id="snowflake" src="img/snowFlake.png" alt="" />
                 </div> -->
@@ -272,7 +273,8 @@
                     then hopefully return the image with most of the noise removed and
                     the underlying picture  more or less intact.
                 </p>
-                <a href="img/Frames Poster.pdf" target="_blank">Symposium Poster</a>
+                <a href="img/Frames Poster.pdf" target="_blank">Symposium Poster</a><br>
+                <a href="img/FramesTalk.pdf" target="_blank">Presentation Slides</a>
 
                 <!-- <div class="snowflake-divider">
                     <img id="snowflake" src="img/snowFlake.png" alt="" />
