--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="links">
                 <a href="mailto:andrejshannon@gmail.com"><i class="fas fa-envelope"></i>email</a>
-                <a href="img/andreShannonResume.pdf" target="_blank"><i class="fas fa-file-alt"></i>resume</a>
+                <a href="img/Andre Shannon Resume.pdf" target="_blank"><i class="fas fa-file-alt"></i>resume</a>
                 <a href="https://github.com/AndreShannon" target="_blank"><i class="fab fa-github"></i>github</a>
                 <a href="https://www.linkedin.com/in/andre-shannon/" target="_blank"><i class="fab fa-linkedin-in"></i>linkedin</a>
             </div>
