Added starting masters to bio

--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
                 <a href="https://www.linkedin.com/in/andre-shannon/" target="_blank"><i class="fab fa-linkedin-in"></i>linkedin</a>
             </div>
             <div class="bio">
-                Hello! <br> My name is Andr&eacute; and I am a 2022 graduate
-                from the University of Richmond where I received a BS in
-                Mathematics and Computer Science. I am interested in artificial
+                Hello! <br> My name is Andr&eacute; and I graduated from
+                the University of Richmond in 2022 where I received a BS in
+                Mathematics and Computer Science. I am starting a masters in computer
+                science at San Francisco State University this coming 2024 fall semester.
+                I am interested in artificial
                 intelligence, machine learning (particularly reinforcement learning)
                 and robotics. In my spare time, I read (recommending all Brandon
                 Sanderson books!), bike, solve Rubik's Cubes, take outdoor trips,
